--- a/Youtube_Clone/style.css
+++ b/Youtube_Clone/style.css
@@ -1,25 +1,42 @@
-.header-section {
+.header {
+  height: 55px;
   border: 1px solid black;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
 }
 
-.header-right {
+.left-section {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  width: 180px;
+  padding-left: 7px;
+
 }
 
 .menu-bar-icon {
 
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 25px;
 
 }
 
 .youtube-logo {
   background-color: white;
-  width: 100px;
+  width: 90px;
 
+}
+
+.middle-section {
+  background-color: aqua;
+  flex: 1;
+  margin-left: 80px;
+  margin-right: 160px;
+  max-width: 600px;
+}
+
+.right-section {
+  background-color: aquamarine;
+  width: 250px;
 }
