--- a/Youtube_Clone/style.css
+++ b/Youtube_Clone/style.css
@@ -10,31 +10,31 @@
 .left-section {
   display: flex;
   align-items: center;
-  width: 180px;
+  width: 170px;
   padding-left: 7px;
-
 }
 
 .menu-bar-icon {
-
-  width: 40px;
   height: 25px;
+  margin-left: 17px;
+  margin-right: 20px;
 
 }
 
 .youtube-logo {
-  background-color: white;
-  width: 90px;
+  width: 95px;
 
 }
 
 .middle-section {
   background-color: aqua;
   flex: 1;
-  margin-left: 80px;
+  margin-left: 60px;
   margin-right: 160px;
   max-width: 600px;
 }
+
+.search-bar {}
 
 .right-section {
   background-color: aquamarine;
