--- a/Youtube_Clone/style.css
+++ b/Youtube_Clone/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined');
+
 .header {
   height: 55px;
-  border: 1px solid black;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
+
 
 }
 
@@ -27,16 +30,97 @@
 }
 
 .middle-section {
-  background-color: aqua;
   flex: 1;
-  margin-left: 60px;
-  margin-right: 160px;
-  max-width: 600px;
+  margin-left: 160px;
+  margin-right: 100px;
+  max-width: 732px;
+  display: flex;
+  align-items: center;
+
 }
 
-.search-bar {}
+.search-bar {
+  flex: 1;
+  height: 40px;
+  padding: 0 4px 0 16px;
+  font-size: 16px;
+  font-weight: medium;
+  border: 1px solid gray;
+  border-radius: 40px 0 0 40px;
+  box-shadow: inset 1px 2px 5px rgba(0, 0, 0, 0.05);
+}
+
+.search-bar::placeholder {
+  font-family: "Roboto", "Arial" sans-serif;
+  font-size: 16px;
+}
+
+.search-button {
+  height: 42px;
+  width: 60px;
+  border: 1px solid gray;
+  margin-left: -1;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  margin-right: 15px;
+}
+
+.search-icon {
+  height: 28px;
+  padding-top: 4px;
+}
+
+
+.voice-search-button {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border: none;
+
+}
 
 .right-section {
-  background-color: aquamarine;
   width: 250px;
+  display: flex;
+  align-items: center;
+}
+
+.create-button {
+  display: flex;
+  align-items: center;
+  gap: 1px;
+  /* Space between + and text */
+  padding: 8px 16px;
+  background-color: #212121;
+  /* Button background */
+  border: none;
+  border-radius: 20px;
+  /* Rounded edges */
+  cursor: pointer;
+  color: white;
+  /* Text color */
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.plus-symbol {
+  font-family: 'Material Symbols Outlined';
+  font-size: 24px;
+  /* Matched size */
+  font-weight: normal;
+  /* Ensure matching thickness */
+  line-height: 1;
+  /* Correct alignment */
+  padding-right: 5px;
+}
+
+.create-button:hover {
+  background-color: #333;
+}
+
+.notification-button {}
+
+.notification-icon {
+  height: 24px
 }
