--- a/Youtube_Clone/style.css
+++ b/Youtube_Clone/style.css
@@ -97,16 +97,20 @@
 .right-section {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 10px;
   padding-right: 20px;
-  flex: 0 1 auto;
+  width: 210px;
+  flex-shrink: 1;
+  margin-right: 10px;
+
 }
 
 .create-button {
   display: flex;
   align-items: center;
-  padding: 5px 11px;
-  background-color: rgb(52, 50, 50);
+  padding: 6px 12px;
+  background-color: rgb(24, 22, 22);
   border: none;
   border-radius: 20px;
   cursor: pointer;
@@ -135,8 +139,8 @@
 }
 
 .profile-icon {
-  height: 32px;
-  width: 32px;
+  height: 36px;
+  width: 36x;
   border-radius: 50%;
   margin-left: 15px;
 }
@@ -182,5 +186,9 @@
     background-color: white;
   }
 
+  .right-section,
+  .profile-icon {
+    margin-right: 0;
+  }
 
 }
