--- a/Youtube_Clone/sidebar.css
+++ b/Youtube_Clone/sidebar.css
@@ -1,8 +1,22 @@
 .sidebar {
+  display: flex;
   position: fixed;
-  background-color: white;
+  background-color: rgb(248, 245, 245);
   top: 60px;
   bottom: 0;
   left: 0;
   width: 216px;
+  justify-content: flex-start;
+
+}
+
+.home-icon {
+  height: 45px;
+  width: 50px;
+}
+
+.icon-text {
+  display: inline-block;
+  padding-left: 20px;
+  margin-bottom: 100px;
 }
